# AnnotatedSentence-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: AnnotatedSentenceTest.c
src/: AnnotatedCorpus.c  AnnotatedCorpus.h  AnnotatedPhrase.c  AnnotatedPhrase.h  AnnotatedSentence.c  AnnotatedSentence.h  AnnotatedWord.c  AnnotatedWord.h  CMakeLists.txt  Language.h  ViewLayerType.c  ViewLayerType.h
